Mass commit (sorry)

--- a/frontend/src/form.html
+++ b/frontend/src/form.html
@@ -3,7 +3,7 @@
   onsubmit="return handleFormSubmit();"
   style="display: none"
 >
-  <h2 class="text-lg">How often will you be donating?</h2>
+  <h2 class="text-lg">I would like to give</h2>
 
   <div class="radio-group flex gap-2 mb-4">
     <input
@@ -13,17 +13,17 @@
       value="one-time"
       checked
     />
-    <label for="one-time" class="hover:bg-eaa-blue-50 rounded-sm">One-time</label>
+    <label for="one-time" class="rounded-sm text-blue"> One-time </label>
     <input
       type="radio"
       id="monthly"
       name="recurring_frequency"
       value="monthly"
     />
-    <label for="monthly" class="hover:bg-eaa-blue-50 rounded-sm">Monthly</label>
+    <label for="monthly" class="rounded-sm text-blue"> Monthly </label>
   </div>
 
-  <h2 class="text-lg mt-8">Where would you like your donation to go?</h2>
+  <h2 class="text-lg mt-8">I would like my gift to go to</h2>
   <div class="radio-group flex gap-2 mb-4">
     <input
       type="radio"
@@ -33,9 +33,8 @@
       checked
       onclick="hide('custom-allocation-section'); showBlock('default-allocation-section');"
     />
-    <label for="default-allocation" class="hover:bg-eaa-blue-50 rounded-sm">
-      Please distribute my donation to the most effective charities, based on
-      evidence and need.
+    <label for="default-allocation" class="rounded-sm text-blue">
+      The most effective charities, based on evidence and need
     </label>
 
     <input
@@ -45,48 +44,13 @@
       value="custom"
       onclick="hide('default-allocation-section'); showBlock('custom-allocation-section');"
     />
-    <label for="custom-allocation" class="hover:bg-eaa-blue-50 rounded-sm">
-      I would like to choose how to allocate my donation.
+    <label for="custom-allocation" class="rounded-sm text-blue">
+      These specific charities
     </label>
   </div>
   <div id="default-allocation-section">
-    <h2 class="text-lg mt-8">How much would you like to donate?</h2>
-    <div class="radio-group flex gap-2 mb-2">
-      <input
-        type="radio"
-        id="donate-25"
-        name="donation-amount"
-        value="25"
-        onchange="$('custom-amount').classList.remove('selected');"
-      />
-      <label for="donate-25" class="hover:bg-eaa-blue-50 rounded-sm">$25</label>
-      <input
-        type="radio"
-        id="donate-50"
-        name="donation-amount"
-        value="50"
-        onchange="$('custom-amount').classList.remove('selected');"
-      />
-      <label for="donate-50" class="hover:bg-eaa-blue-50 rounded-sm">$50</label>
-      <input
-        type="radio"
-        id="donate-100"
-        name="donation-amount"
-        value="100"
-        onchange="$('custom-amount').classList.remove('selected');"
-      />
-      <label for="donate-100" class="hover:bg-eaa-blue-50 rounded-sm">$100</label>
-      <input
-        type="radio"
-        id="donate-250"
-        name="donation-amount"
-        value="250"
-        onchange="$('custom-amount').classList.remove('selected');"
-      />
-      <label for="donate-250" class="hover:bg-eaa-blue-50 rounded-sm">$250</label>
-    </div>
-
-    <div id="custom-amount" class="hover:bg-eaa-blue-50 rounded-sm">
+    <h2 class="text-lg mt-8">I would like to gift</h2>
+    <div id="custom-amount" class="rounded-sm text-blue mb-2">
       <input
         type="radio"
         id="custom-amount-checkbox"
@@ -94,15 +58,55 @@
         value="custom"
         onchange="this.checked ? $('custom-amount-input').focus() : null;"
       />
-      <label class="inline-block" for="custom-amount-checkbox"> Other </label>
+      <label class="inline-block" for="custom-amount-checkbox"> Amount </label>
       <input
-        type="text"
+        type="number"
         inputmode="numeric"
+        min="2"
+        max="999999.99"
+        step="1"
         id="custom-amount-input"
         name="custom-amount-input"
-        class="inline-block rounded-sm"
-        onfocus="$('custom-amount-checkbox').checked = true; $('custom-amount').classList.add('selected');"
+        class="inline-block rounded-sm text-md"
+        onblur="this.value === '' || this.value.toString().startsWith(0) ? this.value = 0 : this.value = this.value;"
+        onfocus="$('custom-amount-checkbox').checked = true; $('custom-amount').classList.add('selected', 'validate');"
+        tabindex="-1"
       />
+    </div>
+    <div class="radio-group flex gap-2 mb-2">
+      <input
+        type="radio"
+        id="donate-25"
+        name="donation-amount"
+        value="25"
+        checked
+        onchange="$('custom-amount').classList.remove('selected','validate');"
+      />
+      <label for="donate-25" class="rounded-sm text-blue">$25</label>
+      <input
+        type="radio"
+        id="donate-50"
+        name="donation-amount"
+        value="50"
+        onchange="$('custom-amount').classList.remove('selected','validate');"
+      />
+      <label for="donate-50" class="rounded-sm text-blue">$50</label>
+      <input
+        type="radio"
+        id="donate-100"
+        name="donation-amount"
+        value="100"
+        onchange="$('custom-amount').classList.remove('selected','validate');"
+      />
+      <label for="donate-100" class="rounded-sm text-blue">$100</label>
+      <input
+        type="radio"
+        id="donate-250"
+        name="donation-amount"
+        value="250"
+        onchange="$('custom-amount').classList.remove('selected','validate');"
+      />
+      <label for="donate-250" class="rounded-sm text-blue">$250</label>
     </div>
   </div>
 
@@ -112,41 +116,74 @@
   </div>
 
   <h2 class="text-lg mt-8">Personal Details</h2>
-  <div class="flex flex-col gap-2 mb-4">
-    <label for="first-name" class="flex flex-col flex-grow mb-4">
-      <div>First name</div>
-      <input type="text" id="first-name" name="first_name" class="block p-2 text-md" />
-    </label>
+  <div class="flex flex-col gap-2 mb-4 validate">
+    <div>
+      <label for="first-name"> First name </label>
+      <input
+        type="text"
+        id="first-name"
+        name="first_name"
+        class="block w-full p-2 text-md border rounded-sm focus-outline"
+        required
+      />
+    </div>
 
-    <label for="last-name" class="flex flex-col flex-grow mb-4">
-      <div>Last name</div>
-      <input type="text" id="last-name" name="last_name" class="block p-2 text-md" />
-    </label>
+    <div>
+      <label for="last-name"> Last name </label>
+      <input
+        type="text"
+        id="last-name"
+        name="last_name"
+        class="block w-full p-2 text-md border rounded-sm focus-outline"
+        required
+      />
+    </div>
 
-    <label for="email" class="flex flex-col flex-grow mb-4">
-      <div>Email</div>
-      <input type="email" id="email" name="email" class="block p-2 text-md" />
-    </label>
+    <div>
+      <label for="email"> Email </label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        class="block w-full p-2 text-md border rounded-sm focus-outline"
+        required
+      />
+    </div>
 
-    <label for="postcode" class="flex flex-col flex-grow mb-4">
-      <div>Postcode</div>
-      <input type="text" id="postcode" name="postcode" class="block p-2 text-md" />
-    </label>
+    <div>
+      <label for="postcode"> Postcode </label>
+      <input
+        id="postcode"
+        type="number"
+        inputmode="numeric"
+        step="1"
+        name="postcode"
+        class="block w-full p-2 text-md border rounded-sm focus-outline"
+        required
+      />
+    </div>
 
-    <label for="country" class="flex flex-col flex-grow mb-4">
-      <div>Country</div>
-      <input type="text" id="country" name="country" class="block p-2 text-md" value="Australia" />
-    </label>
+    <div>
+      <label for="country"> Country </label>
+      <input
+        type="text"
+        id="country"
+        name="country"
+        class="block w-full p-2 text-md border rounded-sm focus-outline"
+        value="Australia"
+        required
+      />
+    </div>
   </div>
 
-  <label for="referral-sources" class="flex flex-col">
-    <h2 class="text-lg mt-8">How did you hear about us?</h2>
+  <div class="flex flex-col">
+    <h2 class="inline-block text-lg mt-8">How did you hear about us?</h2>
     <select
       name="how_did_you_hear_about_us_db"
       id="referral-sources"
-      class="flex flex-grow mb-4"
+      class="eaa-select text-md flex flex-grow mb-4 rounded-md border h-12 border-none p-2 focus-outline"
     ></select>
-  </label>
+  </div>
 
   <div class="flex flex-col items-start">
     <label class="eaa-checkbox">
@@ -191,7 +228,7 @@
       onclick="hide('bank-details-section')"
       checked
     />
-    <label for="credit-card" class="hover:bg-eaa-blue-50 rounded-sm">Credit Card</label>
+    <label for="credit-card" class="rounded-sm text-blue">Credit Card</label>
 
     <input
       type="radio"
@@ -200,7 +237,9 @@
       value="bank-transfer"
       onclick="showBlock('bank-details-section')"
     />
-    <label for="bank-transfer" class="hover:bg-eaa-blue-50 rounded-sm">Bank Transfer</label>
+    <label for="bank-transfer" class="rounded-sm text-blue"
+      >Bank Transfer</label
+    >
   </div>
 
   <div id="bank-details-section">
@@ -220,31 +259,59 @@
         type="checkbox"
         id="gift"
         name="is_gift"
-        onclick="this.checked ? showFlex('gift-section'): hide('gift-section')"
+        onclick="this.checked ? showGiftSection() : hideGiftSection();"
       />
       Yes, this is a gift.
       <div class="checkmark rounded-sm"></div>
     </label>
 
-    <div id="gift-section" class="flex flex-col self-stretch mb-4">
-      <label for="recipient-name" class="flex flex-col mb-4"
-        >Recipient Name
-        <input type="text" id="recipient-name" name="gift_recipient_name" class="p-2 text-md" />
-      </label>
+    <fieldset
+      id="gift-section"
+      class="flex flex-col gap-2 self-stretch mb-4 validate"
+      disabled
+    >
+      <div>
+        <label for="recipient-name"> Recipient Name </label>
+        <input
+          type="text"
+          id="recipient-name"
+          name="gift_recipient_name"
+          class="block w-full p-2 text-md border rounded-sm focus-outline"
+        />
+      </div>
 
-      <label for="recipient-email" class="flex flex-col mb-4"
-        >Recipient Email
-        <input type="email" id="recipient-email" name="gift_recipient_email" class="p-2 text-md" />
-      </label>
+      <div>
+        <label for="recipient-email"> Recipient Email </label>
+        <input
+          type="email"
+          id="recipient-email"
+          name="gift_recipient_email"
+          class="block w-full p-2 text-md border rounded-sm focus-outline"
+          required
+        />
+      </div>
 
-      <label for="gift-message" class="flex flex-col mb-4"
-        >Include a personal message (this will be sent to the recipient)
-        <textarea id="gift-message" name="gift_personal_message" class="resize-none h-20 p-2 text-md"></textarea>
-      </label>
-    </div>
+      <div>
+        <label for="gift-message">
+          Include a personal message to be sent to the recipient (optional)
+        </label>
+        <textarea
+          id="gift-message"
+          name="gift_personal_message"
+          class="block w-full h-20 p-2 text-md block p-2 border rounded-sm focus-outline"
+        ></textarea>
+      </div>
+    </fieldset>
   </div>
 
-  <input id="donate-button" class="mt-4 py-5 px-10 text-white text-md bg-eaa-blue-400 font-bold border-none rounded-sm hover:bg-eaa-blue-300" type="submit" value="Donate" />
+  <button
+    id="donate-button"
+    class="mt-4 py-5 px-10 text-white text-md border-none rounded-sm focus-outline"
+    type="submit"
+    value="Donate"
+  >
+    Donate
+  </button>
 </form>
 
 <div id="thank-you-message" style="display: none">
