Minor improvements (spacing, wording etc)

--- a/frontend/src/allocation-section.html
+++ b/frontend/src/allocation-section.html
@@ -10,7 +10,7 @@
       onclick="hide('#custom-allocation-section'); showBlock('#amount-section');"
     />
     <label for="default-allocation" class="rounded text-blue">
-      The most effective charities according to EAA, based on evidence and need
+      The most effective charities^
     </label>
 
     <input
@@ -25,7 +25,9 @@
     </label>
   </div>
   <p>
-    You can read more about how we evaluate charities
+    ^ According to EAA. We select the most effective charities each quarter
+    based on evidence and need. You can read more about how we evaluate
+    charities
     <a href="https://effectivealtruism.org.au/evaluating-charities/">here</a>.
   </p>
 </section>
