--- a/frontend/src/personal-details-section.html
+++ b/frontend/src/personal-details-section.html
@@ -7,7 +7,7 @@
         type="text"
         id="first-name"
         name="first_name"
-        class="block w-full p-2 text-md border rounded focus-outline"
+        class="block w-full p-2 text-md border rounded focus-outline mb-2 mt-1"
         required
       />
     </div>
@@ -18,7 +18,7 @@
         type="text"
         id="last-name"
         name="last_name"
-        class="block w-full p-2 text-md border rounded focus-outline"
+        class="block w-full p-2 text-md border rounded focus-outline mb-2 mt-1"
         required
       />
     </div>
@@ -29,7 +29,7 @@
         id="email"
         name="email"
         type="email"
-        class="block w-full p-2 text-md border rounded focus-outline"
+        class="block w-full p-2 text-md border rounded focus-outline mb-2 mt-1"
         required
       />
     </div>
@@ -42,7 +42,7 @@
         type="text"
         inputmode="numeric"
         pattern="\d*"
-        class="block w-full p-2 text-md border rounded focus-outline"
+        class="block w-full p-2 text-md border rounded focus-outline mb-2 mt-1"
         required
       />
     </div>
@@ -52,7 +52,7 @@
       <select
         name="country"
         id="country"
-        class="eaa-select text-md flex flex-grow rounded border h-12 border-none p-2 focus-outline"
+        class="eaa-select text-md flex flex-grow rounded border h-12 border-none p-2 focus-outline mt-1"
         required
       ></select>
     </div>
