Fix bugs on mobile

--- a/frontend/src/allocation-section.html
+++ b/frontend/src/allocation-section.html
@@ -9,7 +9,7 @@
       checked
       onclick="hide('#custom-allocation-section'); showBlock('#amount-section');"
     />
-    <label for="default-allocation" class="rounded text-blue">
+    <label for="default-allocation" class="flex items-center justify-center rounded text-blue">
       The most effective charities^
     </label>
 
@@ -20,12 +20,12 @@
       value="custom"
       onclick="hide('#amount-section'); showBlock('#custom-allocation-section');"
     />
-    <label for="custom-allocation" class="rounded text-blue">
+    <label for="custom-allocation" class="flex items-center justify-center rounded text-blue">
       These specific charities
     </label>
   </div>
-  <p>
-    ^ According to EAA. We select the most effective charities each quarter
+  <p style="font-size: small;">
+    ^According to EAA. We select the most effective charities each quarter
     based on evidence and need. You can read more about how we evaluate
     charities
     <a href="https://effectivealtruism.org.au/evaluating-charities/">here</a>.
