Update tests to reflect default comms options

--- a/frontend/src/communications-section.html
+++ b/frontend/src/communications-section.html
@@ -15,6 +15,7 @@
         type="checkbox"
         id="subscribe-to-updates"
         name="subscribe_to_updates"
+        checked
       />
       Send me news and updates
       <div class="checkmark rounded"></div>
