--- a/frontend/src/specific-charity-section.html
+++ b/frontend/src/specific-charity-section.html
@@ -11,7 +11,8 @@
   // Note: This is only run after the charity data has been fetched in main.js
   function buildSpecificCharitySection(specificCharityDetails) {
     if (!specificCharityDetails) {
-      $("#specific-charity-logo").innerHTML = "Sorry, we couldn't find the charity you're looking for. Click <a href='/pledge_new/'>here</a> to start again.";
+      $("#specific-charity-logo").innerHTML =
+        "Sorry, we couldn't find the charity you're looking for. Click <a href='/pledge_new/'>here</a> to start again.";
       return;
     }
 
