Add global totals, refactor a little, improve bank instructions

--- a/frontend/src/custom-allocation-section.html
+++ b/frontend/src/custom-allocation-section.html
@@ -51,10 +51,10 @@
   }
 
   function updateTotal() {
-    let total = 0;
+    totalAmountCustom = 0;
     $$(".specific-charity").forEach((input) => {
-      total += Number(input.value);
+      totalAmountCustom += Number(input.value);
     });
-    $("#total").innerText = `Total: $${total}`;
+    $("#total").innerText = `Total: $${totalAmountCustom}`;
   }
 </script>
