--- a/frontend/src/communications-section.html
+++ b/frontend/src/communications-section.html
@@ -49,7 +49,7 @@
     .then((data) => buildReferralSourcesList(data));
 
   function buildReferralSourcesList(referralSources) {
-    let referralSourcesListHTML = "";
+    let referralSourcesListHTML = "<option value='' disabled selected>Please select one...</option>";
 
     referralSources.forEach((referralSource) => {
       referralSourcesListHTML += `<option value="${referralSource.value}">${referralSource.label}</option>`;
