Make bank instructions prettier

--- a/frontend/src/bank-instructions-section.html
+++ b/frontend/src/bank-instructions-section.html
@@ -25,16 +25,23 @@
       to:
     </p>
     <p>
-      <strong>Account Name</strong>: Effective Altruism Australia <br />
-      <em>Don't worry if it doesn't fit</em>
+      <strong>Account Name</strong><br />
+      <span class="text-lg">Effective Altruism Australia</span><br />
+      <span class="text-sm">(Don't worry if it doesn't fit)</span>
     </p>
-    <p><strong>BSB</strong>: 083 170</p>
-
-    <p><strong>Account No</strong>: 306 556 167</p>
     <p>
-      <strong>Reference Number: </strong
-      ><span id="bank-instructions-reference"></span> <br />
-      <em>Place this in the transaction description</em>
+      <strong>BSB</strong><br />
+      <span class="text-lg">083 170</span>
+    </p>
+
+    <p>
+      <strong>Account No</strong><br />
+      <span class="text-lg">306 556 167</span>
+    </p>
+    <p>
+      <strong>Reference Number</strong><br />
+      <span id="bank-instructions-reference" class="text-lg"></span><br />
+      <span class="text-sm">(Place this in the transaction description)</span>
     </p>
   </div>
   <br />
